@@ -3,6 +3,7 @@ name = Joke Machine
 bundle_id = org.worldwideworkshop.JokeMachineActivity
 exec = sugar-activity JokeMachineActivity.JokeMachineActivity -s
 icon = activity-jokemachine
-activity_version = 11
+activity_version = 12
+mime_types = application/x-jokemachine-project
 host_version = 1
 show_launcher = 1
