@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
+    <mime-type type="application/x-jokemachine-project">
+         <comment xml:lang="en">Jokemachine Project</comment>
+         <glob pattern="*.jokemachine"/>
+    </mime-type>
+</mime-info>
+
